MODROLESKC-301: add upsert rest API method to create default loadable roles (#244)